2008-03-24  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Remove redundant
	  member. May fix some compilation errors.

2008-03-21  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs: Workaround bug in mono
	  1.2.4 where usings are ignored inside anonymous methods.

2008-03-21  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: When
	  Document.FileName is null or empty, try using Document.Title.
	  Enables XML extension on dynamically created documents.
	* MonoDevelop.XmlEditor.addin.xml: Add back a menu separator.
	* MonoDevelop.XmlEditor/XmlEditorService.cs: Remove unused variable.

2008-03-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs: Move dialog to
	  XmlEditorService.
	* MonoDevelop.XmlEditor/RunXslTransformCommand.cs,
	  MonoDevelop.XmlEditor/AssignStylesheetCommand.cs: Moved
	  implementation into XmlEditorService and XmlTextEditorExtension.
	* MonoDevelop.XmlEditor/ClosingBracketCompletionDataProvider.cs: Fix
	  previous character index.
	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Implement commands,
	  based on code from command classes.
	* MonoDevelop.XmlEditor/XmlEditorService.cs: Move more command
	  implementations to editor service and refactor heavily.
	* Makefile.am, MonoDevelop.XmlEditor.mdp: Updated.
	* MonoDevelop.XmlEditor.addin.xml: Enable most of the XML commands.

2008-03-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor/XmlSchemaManager.cs: Actually use merged schema
	  collection.
	* MonoDevelop.XmlEditor/XmlCompletionData.cs: Remove unnecessary
	  reference to inherited interface.
	* MonoDevelop.XmlEditor/GoToSchemaDefinitionCommand.cs,
	  MonoDevelop.XmlEditor/CreateSchemaCommand.cs,
	  MonoDevelop.XmlEditor/FormatXmlCommand.cs,