@@ -1,3 +1,11 @@
+2008-03-26  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: When using the
+	  Mono.TextEditor/SourceEditor2 editor, enable XML syntax
+	  highlighting for all user-registered XML filetypes.
+	* MonoDevelop.XmlEditor/XmlSchemaCompletionDataCollection.cs: Oops, fix
+	  null check that prevented access to full set of schemas.
+
 2008-03-24  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Remove redundant
